--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,6 @@
 version: "2"
 
 services:
-  our-app:
-    build: .
-    environment:
-      - MODE=dev
-      - ELASTICSEARCH_HOST=127.0.0.1
-      - ELASTICSEARCH_PORT=9200
-    volumes:
-      - .:/code
-    depends_on:
-      - elasticsearch
-    ports:
-      - "9091:9090"
-
 
   elasticsearch:
     image: elasticsearch:5-alpine
@@ -27,3 +14,4 @@ services:
       - "9300:9300"
     volumes:
       - ../data:/usr/share/elasticsearch/data
+      - ./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
